@@ -31,6 +31,7 @@ Improved ZX Spectrum Next emulation:
 
 Fixed ZX Vision relocation windows
 Fixed memory leak error when drawing aventure map
+Fixed error when no permissions writing to mmc, ide, trd, dsk, hilow: disable persistent writes when it happens
 
 * As always, there are some other minor bugfixes and improvements
 
